(executable
 (name parsleyc)
 (libraries parsing typing analysis anfcfg anfcfg_interpreter anfscf anfscf_interpreter tests cmdliner)
 (link_deps parsing/parseErrorMessages.check)
 )

; Specify a profile for an AFL build to get global flag settings.
; Use this with --profile in the Makefile.
(env
 (afl (ocamlopt_flags (:standard -afl-instrument))))
